# EmotivEpoc_extract_raw_EEG_without_license

./: .gitignore  EmotivEpoc_extract_raw_EEG_without_license.code-workspace  README.md  capture_screen_recording.py  extract.py  pyproject.toml
data/: EEG_1.csv
